# M4G-BLE-Bridge

./: .gitignore  BUILD.md  CHARACHORDER_PROTOCOL_REVERSE_ENGINEERING.md  CMakeLists.txt  DEVICE_MANAGER_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  Kconfig  Kconfig.projbuild  LED_AUTO_DETECTION.md  LICENSE  M4G-BLE-Bridge.code-workspace  NEXT_STEPS.md  PAGES_CONFIG_FIX.md  PROTOCOL_TEST_INSTRUCTIONS.md  PUBLISHING.md  QUICK_START_SPLIT.md  README.md  README_SPLIT_KEYBOARD.md  Readme.md  SPLIT_KEYBOARD_CHANGES.md  SPLIT_KEYBOARD_SETUP.md  USB_TRAFFIC_CAPTURE_GUIDE.md  build-all.sh  build-left.sh  build-right.sh  build-standalone.sh  debug  package-lock.json  publish.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.left  sdkconfig.defaults.orig  sdkconfig.defaults.right  sdkconfig.defaults.standalone  sdkconfig.old  verify-split-setup.sh
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  deploy-device-manager.yml
.old/: BleDevice.h  ESP32-USB-TO-BLE.ino  ESP32-USBSoftHost.cpp  blue_led_pin_finder.ino  nops.hpp  usb_host.h
.old/src/: BleDevice.cpp  BleDevice.h  ESP32-USB-TO-BLE.ino
components/m4g_ble/: CMakeLists.txt  hid_report_map.txt  m4g_ble.c
components/m4g_ble/include/: m4g_ble.h
components/m4g_bridge/: CMakeLists.txt  m4g_bridge.c  test_bridge_stub.c
components/m4g_bridge/include/: m4g_bridge.h
components/m4g_diag/: CMakeLists.txt  m4g_diag.c
components/m4g_diag/include/: m4g_diag.h
components/m4g_espnow/: CMakeLists.txt  m4g_espnow.c
components/m4g_espnow/include/: m4g_espnow.h
components/m4g_led/: CMakeLists.txt  m4g_led.c  simple_neopixel.c
components/m4g_led/include/: m4g_led.h  simple_neopixel.h
components/m4g_logging/: CMakeLists.txt  m4g_logging.c
components/m4g_logging/include/: m4g_logging.h
components/m4g_settings/: CMakeLists.txt  Kconfig  m4g_settings.c
components/m4g_settings/include/: m4g_settings.h
components/m4g_usb/: CMakeLists.txt  m4g_usb.c
components/m4g_usb/include/: m4g_usb.h
components/platform/: CMakeLists.txt  m4g_platform_esp32s3.c
components/platform/include/: m4g_platform.h
docs/: README.md  charachorder_timing_analysis.md  development_roadmap.md  led_status_indicators.md  nrf52840_max3421e_plan.md
docs/power/: claude_sematics.md
main/: CMakeLists.txt  Kconfig  main.c  main_left.c  main_right.c
platform/: CMakeLists.txt  README.md
platform/common/: m4g_platform.h
platform/esp32s3/: CMakeLists.txt  m4g_platform_esp32s3.c  m4g_platform_esp32s3.h
platform/esp32s3/platform/common/: m4g_platform.h
platform/nrf52840/: CMakeLists.txt  README.md  m4g_platform_nrf52840.c  m4g_platform_nrf52840.h
src/: BleDevice.cpp  BleDevice.h  ESP32-USB-Soft-Host.h  ESP32-USB-TO-BLE.ino  ESP32-USBSoftHost.hpp  usb_host.c
tools/: README.md  check-deployment.sh  validate_config.py
tools/device-manager-web/: .gitignore  .trigger-deploy  CLEANUP_SUMMARY.md  DEBUG_SERIAL_CONNECTION.md  DEPLOYMENT_CHECKLIST.md  GITHUB_PAGES.md  GITHUB_RELEASES.md  README.md  RECENT_FIXES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/device-manager-web/public/firmware/: README.md  manifest.json
tools/device-manager-web/src/: App.tsx  styles.css  types.d.ts
